--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -21,7 +21,11 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
